# fileConversionServer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  requirements.txt  setup.cfg
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  firebase.py  logging_config.py
app/models/: schemas.py
app/services/: conversion.py
app/services/conversion/: conversion.py
tests/: test_conversion.py
