[metadata]
name = mypackage            
version = 0.1.0            
author = Your Name         
author_email = your.email@example.com
description = A brief description of my package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/username/mypackage 
license = MIT        
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
exclude = .git,__pycache__,venv
max-line-length = 88
extend-ignore = E203

[isort]
profile = black